--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a {
 .hero-wrapper {
   height: calc(100vh - 75px);
   margin-top: 75px;
-  width: 100vw;
+  width: 100%;
   background-image: url("images/logo.svg");
   background-repeat: no-repeat;
   background-position: center;
